<resources>
    <string name="app_name">P&amp;C Dashboard</string>
    <string name="time_test">12:00, 01/12/2019</string>
    <string name="content_test">Đây là nội dung cụ thể, bla...bla...</string>
    <string name="title_test">Đây là tiêu đề</string>
    <string name="id_test">1613000</string>
    <string name="phone_test">0123456789</string>
    <string name="email_test">admin_pcdasboard@gmail.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="email">Email</string>
    <string name="get_password">Lấy lại mật khẩu</string>
    <string name="back">Trở về</string>
    <string name="study">Học tập</string>
    <string name="setting">Cài đặt</string>
    <string name="help">Hỗ trợ</string>
    <string name="schedule">Thời khóa biểu</string>
    <string name="score">Điểm thi</string>
    <string name="exam_schedule">Lịch thi</string>
    <string name="update_info">Cập nhật thông tin</string>
    <string name="change_pasword">Thay đổi mật khẩu</string>
    <string name="feedback">Phản hồi và hỗ trợ</string>
    <string name="guide">Hướng dẫn</string>
    <string name="logout">Đăng xuất</string>
    <string name="comment">Bình luận</string>
    <string name="write_comment">Viết bình luận...</string>
    <string name="write_message">Nhập tin nhắn...</string>
    <string name="confirm">Xác nhận</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="re_type_password">Nhập lại mật khẩu mới</string>
    <string name="post">Đăng</string>
    <string name="whats_on_your_mind">Bạn đang nghĩ gì?</string>
    <string name="edit">Sửa</string>
    <string name="delete">Xóa</string>
    <string name="cancel">Hủy</string>
    <string name="developer">Nhà phát triển</string>
</resources>
