<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.PasswordFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_50dp"
        android:background="@drawable/bg_panel"/>

    <ImageButton
        android:id="@+id/ib_back_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_10dp"
        android:src="@drawable/ic_back_cold_32dp"
        android:background="@android:color/transparent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_changepassword" />
        <EditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_text_login"
            android:layout_marginTop="@dimen/space_40dp"
            android:drawableLeft="@drawable/ic_password_hot_24dp"
            android:hint="@string/old_password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_text_login"
            android:drawableLeft="@drawable/ic_password_cold_24dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/et_retype_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_text_login"
            android:drawableLeft="@drawable/ic_key_cold_24dp"
            android:hint="@string/re_type_password"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button_login"
            android:layout_marginTop="@dimen/space_10dp"
            android:text="@string/change_pasword" />

    </LinearLayout>

</RelativeLayout>