<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.InfoFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_50dp"
        android:background="@drawable/bg_panel"/>
    <ImageButton
        android:id="@+id/ib_back_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_10dp"
        android:src="@drawable/ic_back_cold_32dp"
        android:background="@android:color/transparent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_20dp"
            app:cardCornerRadius="60dp"
            app:cardElevation="@dimen/space_10dp">
            <ImageView
                android:id="@+id/iv_avatar_info"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/logo"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_name_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10dp"
            android:text="@string/app_name"
            android:textColor="@color/colorCold"
            android:textSize="@dimen/font_size_24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_id_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_text_login"
            android:layout_marginTop="@dimen/space_20dp"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/ic_user_cold_24dp"
            android:text="@string/id_test"
            android:textSize="@dimen/font_size_16sp"/>

        <TextView
            android:id="@+id/tv_class_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_text_login"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/ic_class_cold_24dp"
            android:text="K16"
            android:textSize="@dimen/font_size_16sp"/>

        <EditText
            android:id="@+id/et_email_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_text_login"
            android:drawableLeft="@drawable/ic_email_hot_24dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/et_phone_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_text_login"
            android:drawableLeft="@drawable/ic_phone_hot_24dp"
            android:hint="@string/phone_number"
            android:inputType="phone"/>

        <Button
            android:id="@+id/btn_update_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_10dp"
            style="@style/button_login"
            android:layout_marginTop="@dimen/space_10dp"
            android:text="@string/update_info" />
    </LinearLayout>

</RelativeLayout>