<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".Fragment.ForgotFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btn_get_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/button_login"
        android:layout_below="@id/ll_input_forgot"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_20dp"
        android:text="@string/get_password" />

    <ImageView
        android:id="@+id/iv_logo_forgot"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_above="@id/ll_input_forgot"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/space_30dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/ll_input_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_account_forgot"
            style="@style/edit_text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_user_cold_24dp"
            android:hint="@string/account" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_back_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_get_forgot"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_20dp"
        android:text="@string/back"
        android:textSize="@dimen/font_size_16sp"
        android:textStyle="italic"/>

</RelativeLayout>