<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".Fragment.LoginFragment">

    <!-- TODO: Update blank fragment layout -->


    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_input_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button_login"
        android:paddingLeft="@dimen/space_30dp"
        android:paddingTop="@dimen/space_10dp"
        android:paddingRight="@dimen/space_30dp"
        android:paddingBottom="@dimen/space_10dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_size_20sp" />

    <ImageView
        android:id="@+id/iv_logo_login"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/ll_input_login"
        android:layout_marginBottom="@dimen/space_30dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/ll_input_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_account_login"
            style="@style/LoginInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_person_sky_blue_24dp"
            android:hint="@string/account" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorOrange">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/LoginInput"
                android:id="@+id/et_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock_sky_blue_24dp"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forgot_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_20dp"
        android:text="@string/forgot_password"
        android:textSize="@dimen/font_size_16sp"/>
</RelativeLayout>