<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/space_5dp"
    app:cardCornerRadius="@dimen/space_10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/iv_image_department_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_content_department_item"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tv_title_department_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_10dp"
            android:layout_marginTop="@dimen/space_10dp"
            android:layout_marginRight="@dimen/space_10dp"
            android:text="@string/title_test"
            android:textColor="@color/colorSlateGray"
            android:textSize="@dimen/font_size_20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_time_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_below="@id/tv_title_department_item"
            android:layout_marginLeft="@dimen/space_10dp"
            android:layout_marginRight="@dimen/space_10dp"
            android:text="@string/time_test"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/font_size_12sp" />

        <TextView
            android:id="@+id/tv_content_department_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_time_department"
            android:layout_marginLeft="@dimen/space_10dp"
            android:layout_marginTop="@dimen/space_5dp"
            android:layout_marginRight="@dimen/space_10dp"
            android:layout_marginBottom="@dimen/space_10dp"
            android:autoLink="all"
            android:linksClickable="true"
            android:text="@string/content_test"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_14sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>