<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/space_5dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="@dimen/space_5dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="@dimen/space_10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ib_more_class_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/space_10dp"
            android:layout_marginRight="@dimen/space_10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_more_hot_24dp" />

        <ImageView
            android:id="@+id/iv_image_class_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_content_class_item"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tv_content_class_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_avatar_class_item"
            android:layout_margin="@dimen/space_10dp"
            android:text="@string/content_test"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_14sp" />

        <TextView
            android:id="@+id/tv_name_class_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_10dp"
            android:layout_marginTop="@dimen/space_10dp"
            android:layout_toRightOf="@id/cv_avatar_class_item"
            android:text="@string/app_name"
            android:textColor="@color/colorSlateGray"
            android:textSize="@dimen/font_size_16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_time_class_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/cv_avatar_class_item"
            android:layout_marginLeft="@dimen/space_10dp"
            android:layout_toRightOf="@id/cv_avatar_class_item"
            android:text="@string/time_test"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/font_size_12sp" />

        <TextView
            android:id="@+id/tv_comment_class_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_image_class_item"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_comment_hot_24dp"
            android:drawablePadding="@dimen/space_5dp"
            android:padding="@dimen/space_10dp"
            android:gravity="center_vertical"
            android:text="@string/comment"
            android:textColor="@color/colorCold"
            android:textSize="@dimen/font_size_14sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_avatar_class_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_10dp"
            android:layout_marginTop="@dimen/space_10dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/iv_avatar_class_item"
                android:layout_width="@dimen/space_40dp"
                android:layout_height="@dimen/space_40dp"
                android:src="@drawable/logo" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</androidx.cardview.widget.CardView>