<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/space_5dp"
    android:layout_marginBottom="@dimen/space_5dp"
    android:layout_marginRight="@dimen/space_5dp"
    android:layout_marginLeft="@dimen/space_5dp"
    android:paddingLeft="@dimen/space_5dp"
    android:paddingRight="@dimen/space_5dp">

    <ImageButton
        android:id="@+id/ib_edit_comment_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10dp"
        android:layout_marginRight="@dimen/space_10dp"
        android:layout_toLeftOf="@id/ib_delete_comment_item"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_edit_hot_24dp" />

    <ImageButton
        android:id="@+id/ib_delete_comment_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/space_10dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_delete_hot_24dp" />

    <LinearLayout
        android:id="@+id/ll_content_comment_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_10dp"
        android:layout_marginRight="70dp"
        android:layout_toRightOf="@id/cv_avatar_comment_item"
        android:background="@drawable/bg_item_comment"
        android:orientation="vertical"
        android:paddingLeft="@dimen/space_10dp"
        android:paddingTop="@dimen/space_5dp"
        android:paddingRight="@dimen/space_10dp"
        android:paddingBottom="@dimen/space_5dp">

        <TextView
            android:id="@+id/tv_name_comment_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorSlateGray"
            android:textSize="@dimen/font_size_14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_content_comment_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/content_test"
            android:textColor="@android:color/black"
            android:autoLink="all"
            android:linksClickable="true"
            android:textSize="@dimen/font_size_14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_time_comment_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_content_comment_item"
        android:layout_alignLeft="@id/ll_content_comment_item"
        android:layout_marginLeft="@dimen/space_10dp"
        android:text="@string/time_test"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/font_size_10sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_avatar_comment_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/space_20dp">

        <ImageView
            android:id="@+id/iv_avatar_comment_item"
            android:layout_width="@dimen/space_40dp"
            android:layout_height="@dimen/space_40dp"
            android:src="@drawable/logo" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>