<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Fragment.PostFragment">

    <RelativeLayout
        android:id="@+id/rl_back_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_50dp"
        android:background="@drawable/bg_panel">

        <ImageButton
            android:id="@+id/ib_back_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back_cold_32dp" />
        <TextView
            android:id="@+id/tv_edit_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/space_10dp"
            android:text="@string/edit"
            android:textAllCaps="true"
            android:textColor="@color/colorCold"
            android:textSize="@dimen/font_size_20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_back_edit">

        <RelativeLayout
            android:id="@+id/rl_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_input_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv_avatar_edit"
                android:layout_marginTop="@dimen/space_10dp"
                android:background="@android:color/white"
                android:gravity="start"
                android:hint="@string/whats_on_your_mind"
                android:padding="@dimen/space_10dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_20sp" />

            <TextView
                android:id="@+id/tv_name_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/cv_avatar_edit"
                android:layout_toRightOf="@id/cv_avatar_edit"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_class_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_name_edit"
                android:layout_alignBottom="@id/cv_avatar_edit"
                android:background="@drawable/bg_edittext_login"
                android:padding="@dimen/space_5dp"
                android:text="Thành viên của "
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/font_size_12sp" />

            <ImageView
                android:id="@+id/iv_image_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_input_edit"
                android:layout_marginTop="@dimen/space_10dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_avatar_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_10dp"
                android:layout_marginTop="@dimen/space_10dp"
                android:layout_marginRight="@dimen/space_10dp"
                app:cardCornerRadius="25dp">

                <ImageView
                    android:id="@+id/iv_avatar_edit"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/logo" />
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>